--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   </div>
   <script>
     // Data showing water points - replace the dummy URL with your own.
-    var url = 'https://raw.githubusercontent.com/kpecsok98/'
+    var url = 'https://kpecsok98.github.io/studio-week5/data-tutorial/data/zaatari_refugeecamp_water_kpecsok_simplified.geojson'
 
 
     mapboxgl.accessToken = 'pk.eyJ1Ijoia3BlY3Nvazk4IiwiYSI6ImNrbGp0Zml4aTA5bjEydWtieXBoanpkMTAifQ.8gD5--vW98H28Jp_HcwUmg';
