--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   </div>
   <script>
     // Data showing water points - replace the dummy URL with your own.
-    var url = 'https://kpecsok98.github.io/studio-week5/data-tutorial/data/zaatari_refugeecamp_water_kpecsok_simplified.geojson'
+    var url = 'https://raw.githubusercontent.com/kpecsok98/studio-week5/main/data-tutorial/data/zaatari_refugeecamp_water_kpecsok_simplified.geojson'
 
 
     mapboxgl.accessToken = 'pk.eyJ1Ijoia3BlY3Nvazk4IiwiYSI6ImNrbGp0Zml4aTA5bjEydWtieXBoanpkMTAifQ.8gD5--vW98H28Jp_HcwUmg';
@@ -72,11 +72,68 @@
         }
       });
 
+      // When the map has finished loading, add a new layer that will be empty
+      // at first, but will eventually house our confirmed water sites.
+      map.addLayer({
+        id: 'selected-water',
+        source: {
+          type: 'geojson',
+          data: { "type": "FeatureCollection", "features": [] }
+        },
+        type: 'circle',
+        paint: {
+          'circle-color': 'red',
+          'circle-radius': 3
+        }
+      });
+
+      // Draw the search radius on the map
+      map.addLayer({
+        id: 'search-radius',
+        source: {
+          type: 'geojson',
+          data: { "type": "FeatureCollection", "features": [] }
+        },
+        type: 'fill',
+        paint: {
+          'fill-color': '#fcf683',
+          'fill-opacity': 0.5
+        }
+      });
+      });
+
     //Click event goes here!
+    map.on('click', function(e) {
+      var eventLngLat = [e.lngLat.lng, e.lngLat.lat];
+      console.log(eventLngLat)
+    });
 
     //makeRadius function goes here!
+      function makeRadius(lngLatArray, radiusInMeters) {
+        var point = turf.point(lngLatArray);
+        var buffered = turf.buffer(point, radiusInMeters, { units: 'meters' });
+        return buffered;
+      }
+
+      var searchRadius = makeRadius(eventLngLat, 500);
+        map.getSource('search-radius').setData(searchRadius);
 
     //spatialJoin function goes here!
+    function spatialJoin(sourceLayer, filterFeature) {
+      // Need this line to specify the array since map.getSource in the click event doesn't do this.
+      sourceGeoJSON = map.querySourceFeatures(sourceLayer);
+      // Loop through all the features in the source geojson and return the ones that
+      // are inside the filter feature (buffered radius) and are confirmed landing sites
+      var joined = sourceGeoJSON.filter(function (feature) {
+        return turf.booleanPointInPolygon(feature, filterFeature) && feature.properties.type === 'Free_standing';
+      });
+
+      return joined;
+    };
+
+    var featuresInBuffer = spatialJoin('OSM-water', searchRadius);
+
+    map.getSource('selected-water').setData(turf.featureCollection(featuresInBuffer));
 
   </script>
 
