Update Instructios text.

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <h2> Background</h2>
     <p> The SPHERE standards which mandates standards for humanitarian action state that residents of a refugee camp should travel less than 500 meters to access water. This interactive map shows that no matter where a resident resides in the Zaatari Refugee Camp in Jordan they are within 500 meters of a water spot, meeting SPHERE Standards. Check it out yourself by following the simple instructions below. To learn more about SPHERE Sandards related to water, check out the SPHERE Handbook Chapter on Water <a href="https://handbook.spherestandards.org/en/sphere/#ch006_004">here</a>. As the data changes you may want to update it, if you wish to do so follow this <a href="https://github.com/kpecsok98/studio-week5/blob/main/data-tutorial/DATA-TUTORIAL.md">tutorial</a> on collecting and filtering this data, and if you wish to code the data click on this <a href="https://github.com/kpecsok98/studio-week5">link</a> which provides a reference of the code used to present the data on this webpage.</p>
     <h2> Instructions</h2>
-    <p>Click anywhere on the map to see water sites within a 500m radius at the Zaatari Refugee Camp. Stand alone water sites within the 500 meter radius will be highlighted in red when you click on the map.</p>
+    <p>Click anywhere on the map to see water sites within a 500 meter radius at the Zaatari Refugee Camp. Stand alone water sites within the 500 meter radius will be highlighted in red when you click on the map.</p>
   </div>
   <script>
     // Data showing water points - replace the dummy URL with your own.
